paste from mleblanc

--- a/makingglue.html
+++ b/makingglue.html
@@ -61,7 +61,7 @@
         </div>
         <div id="molecule">
           <h2>Molecular Composition and Properties</h2>
-          <p> First, the researchers chose to study hydrophobic substances because they do not attract water, and thus, the dynamic, wet environment would not interfere with the its adhesive abilities. They hypothesized that they could best control the application of a hydrophobic substance that could be activated in place via ultraviolet light. They chose to add Irgacure 2959, a light-activation molecule, to poly-glycerol sebacate acrylate, a hydrophobic polymer which consists of two naturally occuring molecules: glycerol and sebacic acid.
+          <p> First, the researchers chose to study hydrophobic substances because they do not attract water, and thus, the dynamic, wet environment would not interfere with the its adhesive abilities. They hypothesized that light-triggered, hydrophobic substances would be easier to use. They mixed Irgacure 2959, a light-activation molecule, with the poly-glycerol sebacate acrylate, a hydrophobic polymer which consists of two naturally occuring molecules: glycerol and sebacic acid.
           </p>
           <table>
           <tr>          
@@ -69,7 +69,7 @@
             <td><img src="images/sebacicacid.JPG"/></td> 
           </tr>
           </table>
-          <p class="caption"> Figure 3: Diagrams of the hydrogen, carbon, and oxygen structure of glycerol (left) and sebacic acid (right), the two main naturally occuring components of their glue. Glycerol is a basic building block of lipids, and sebacic acid is a molecule that is made in our bodies during the production of fatty acids.
+	          <p class="caption"> Figure 3: The structure of glycerol (left) and sebacic acid (right), the two main naturally occuring components of their glue. Glycerol is a basic building block of lipids, and sebacic acid is a molecule that is made in our bodies during the production of fatty acids.
           </p>
         </div>
         <div id="lightactivation">
