--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <span class="blc"></span><span class="trc"></span>
         </div> -->
         <article class="markdown-body">
-        <h1> </h1>
+        <h1>Introduction</h1>
         <div id="inspiration">
           <h2>The Inspiration</h2>
           <p>Scientists frequently draw on the wonders of nature to solve problems. How has this tiny creature saving lives? 
@@ -55,15 +55,18 @@
           </p>
           <table>
           <tr>
-            <td><img float="center" src="images/superglue.jpg"/></td>
-            <td><img float="center" src="images/sutures.jpg"/></td>
+            <td><img src="images/superglue.jpg"/></td>
+            <td><img src="images/sutures.jpg"/></td>
           </tr>
           </table>
+        </div>
+        <div id="research">
+          <h2>The Researchers</h2>
           <p class="caption">Figure 2: To close wounds, doctors often use medical glues that work like Super Glue (left)! Alternatively, doctors can sew the skin together with surgical sutures (right). 
           </p> 
-          <p>Harvard professor Jeffrey Karp collaborated with Nora Lang, Maria Pereira, Robert Langer, and Pedro del Nido, researchers from the Boston’s Children Hospital, Brigham and Women’s Hospital, the Massachusetts Institute of Technology, to develop a biodegradable, biocompatible, and versatile adhesive. They compared the adhesion strength of this <a class="def">hydrophobic<span> <em> Definition </em> not water-attracting </span></a>, light-activated adhesive (HLAA) to fibrin-sealant and medical-grade <a class="def">CA<span> <em> Definition </em> Cyanoacrylate, a generic name for a family of adhesives </span></a> when patching heart defects and sealing artery defects to show the potential of this novel solution.
+          <p>Harvard professor Jeffrey Karp collaborated with Nora Lang, Maria Pereira, Robert Langer, and Pedro del Nido, researchers from the Boston’s Children Hospital, Brigham and Women’s Hospital, the Massachusetts Institute of Technology, to develop a biodegradable, <a class="def">biocompatible<span> <em> Definition </em> Not harmful to living tissue </span></a>, and versatile adhesive. They compared the adhesion strength of this <a class="def">hydrophobic<span> <em> Definition </em> not water-attracting </span></a>, light-activated adhesive (HLAA) to fibrin-sealant and medical-grade <a class="def">CA<span> <em> Definition </em> Cyanoacrylate, a generic name for a family of adhesives </span></a> when patching heart defects and sealing artery defects to show the potential of this novel solution.
           </p>
-          </div>
+        </div>
         </article>
       </div>
     </div>
