--- a/makingglue.html
+++ b/makingglue.html
@@ -63,7 +63,7 @@
           <h2>Molecular Composition and Properties</h2>
           <p> First, the researchers looked for <a class="def">hydrophobic<span> <em> Definition </em> not water-attracting </span></a> substances, which can resist interference from the dynamic, wet environment. Enter poly-glycerol sebacate acrylate (PGSA), a hydrophobic polymer which consists of two naturally occuring molecules: glycerol and sebacic acid. Because glycerol and sebacic acid are both produced in our bodies, there was no question about whether PGSA was safe to use. 
           </p>
-          <table>
+          <table border="0">
           <tr>          
             <td><img src="images/glycerol.JPG"/></td>
             <td><img src="images/sebacicacid.JPG"/></td> 
@@ -76,7 +76,7 @@
         </div>
         <div id="lightactivation">
           <h2>Light Activation</h2>
-          <table>
+          <table border="0">
           <tr>          
             <td><img src="images/uvomnicure.gif"/></td>
             <td><img src="images/pgsapolymerization.bmp"/></td> 
