fiddling with table

--- a/makingglue.html
+++ b/makingglue.html
@@ -65,7 +65,7 @@
           </p>
           <table border="0">
           <tr>          
-            <td width="50" align="center>"<img src="images/glycerol.JPG"/></td>
+            <td align="center>"<img src="images/glycerol.JPG"/></td>
             <td width="50" align="center"><img src="images/sebacicacid.JPG"/></td> 
           </tr>
           </table>
