--- a/makingglue.html
+++ b/makingglue.html
@@ -66,7 +66,7 @@
           <table border="0">
           <tr>          
             <td><img src="images/glycerol.JPG"/></td>
-            <td width="50" align="center"><img src="images/sebacicacid.JPG"/></td> 
+            <td width="50%" align="center"><img src="images/sebacicacid.JPG"/></td> 
           </tr>
           </table>
 	  <p class="caption"> Figure 3: The structure of a molecule of glycerol (left) and sebacic acid (right). The black, white, and red spheres represents carbon, hydrogen, and oxygen atoms repectively. 
