fiddling with table

--- a/makingglue.html
+++ b/makingglue.html
@@ -63,7 +63,7 @@
           <h2>Molecular Composition and Properties</h2>
           <p> First, the researchers looked for <a class="def">hydrophobic<span> <em> Definition </em> not water-attracting </span></a> substances, which can resist interference from the dynamic, wet environment. Enter poly-glycerol sebacate acrylate (PGSA), a hydrophobic polymer which consists of two naturally occuring molecules: glycerol and sebacic acid. Because glycerol and sebacic acid are both produced in our bodies, there was no question about whether PGSA was safe to use. 
           </p>
-          <table border="0">
+          <table border="">
           <tr>          
             <td align="right"><img src="images/glycerol.JPG"/></td>
             <td width="50%" align="left" bgcolor="#000000"><img src="images/sebacicacid.JPG"/></td> 
