--- a/makingglue.html
+++ b/makingglue.html
@@ -63,12 +63,8 @@
           <h2>Molecular Composition and Properties</h2>
           <p> First, the researchers looked for <a class="def">hydrophobic<span> <em> Definition </em> not water-attracting </span></a> substances, which can resist interference from the dynamic, wet environment. Enter poly-glycerol sebacate acrylate (PGSA), a hydrophobic polymer which consists of two naturally occuring molecules: glycerol and sebacic acid. Because glycerol and sebacic acid are both produced in our bodies, there was no question about whether PGSA was safe to use. 
           </p>
-          <table border="">
-          <tr>          
-            <td align="right"><img src="images/glycerol.JPG"/></td>
-            <td width="50%" align="left" bgcolor="#000000"><img src="images/sebacicacid.JPG"/></td> 
-          </tr>
-          </table>
+          <p><img src="images/glycerol-sebacicacid.JPG"/>
+          </p>
 	  <p class="caption"> Figure 3: The structure of a molecule of glycerol (left) and sebacic acid (right). The black, white, and red spheres represents carbon, hydrogen, and oxygen atoms repectively. 
           </p>
           <p> Also, they hypothesized that they glue would be easier to use if it were triggered to harden via ultraviolet (UV) light, which should not be dangerous when used selectively. So, they mixed a light-activation molecule, Irgatcure 2959, with the PGSA. 
@@ -76,12 +72,8 @@
         </div>
         <div id="lightactivation">
           <h2>Light Activation</h2>
-          <table border="0">
-          <tr>          
-            <td><img src="images/uvomnicure.gif"/></td>
-            <td><img src="images/pgsapolymerization.bmp"/></td> 
-          </tr>
-          </table>
+          <p><img src="images/uvomnicure-polymerization.JPG"/>
+          </p>
           <p class="caption"> Figure 4: The OmniCure S1000 UV Light source machine by Lumen Dynamics Group, Inc used by the researchers (left) and a molecular diagram showing how the glue hardens (right). 
 <!--          Once the glue was placed on the wound, UV light was applied with an OmniCure S1000 UV light source machine  by Lumen Dynamics Group, Inc, causing the molecules to form a strong bond, while maintaining a flexible shape. -->
          </p>
