--- a/makingglue.html
+++ b/makingglue.html
@@ -43,48 +43,48 @@
         <article class="markdown-body">
         <h1>Making the Glue</h1>
         <div id="goal">
-          <h2>Engineering Goal and Criteria</h2>
-          <p>The goal of the project was to engineer an improved bioadhesive that:
-          </p>
-          <p>
-           <ol>
-           <li> adheres in wet environments in an easily controlled manner</li>
-           <li> withstands the dynamic movement of muscles and blood</li>
-           <li> does not damage <a class="def">cardiac tissue<span> <em> Definition </em> The major type of muscle that is found in the heart </span></a> </li>
-           <li> is non-toxic and biodegradable</li>
-           <li> provides a strong, watertight seal</li>
-           </ol>
-          </p>
-          <p class="spacing"></p>
-          <p></p>
-          <p></p>
-        </div>
-        <div id="molecule">
-          <h2>Molecular Composition and Properties</h2>
-          <p> First, the researchers looked for <a class="def">hydrophobic<span> <em> Definition </em> not water-attracting </span></a> substances, which can resist interference from the dynamic, wet environment. Enter poly-glycerol sebacate acrylate (PGSA), a hydrophobic polymer which consists of two naturally occuring molecules: glycerol and sebacic acid. Because glycerol and sebacic acid are both produced in our bodies, there was no question about whether PGSA was safe to use. 
-          </p>
-          <p><img src="images/glycerol-sebacicacid.JPG"/>
-          </p>
-	  <p class="caption"> Figure 3: The structure of a molecule of glycerol (left) and sebacic acid (right). The black, white, and red spheres represents carbon, hydrogen, and oxygen atoms repectively. 
-          </p>
-          <p> Also, they hypothesized that they glue would be easier to use if it were triggered to harden via ultraviolet (UV) light, which should not be dangerous when used selectively. So, they mixed a light-activation molecule, Irgatcure 2959, with the PGSA. 
-          </p>
-        </div>
-        <div id="lightactivation">
-          <h2>Light Activation</h2>
-          <p><img src="images/uvomnicure-polymerization.JPG"/>
-          </p>
-          <p class="caption"> Figure 4: The OmniCure S1000 UV Light source machine by Lumen Dynamics Group, Inc used by the researchers (left) and a molecular diagram showing how the glue hardens (right). 
-<!--          Once the glue was placed on the wound, UV light was applied with an OmniCure S1000 UV light source machine  by Lumen Dynamics Group, Inc, causing the molecules to form a strong bond, while maintaining a flexible shape. -->
-         </p>
-         <p> Thus, the researchers simply had to shine a UV light to turn the <a class="def">viscous<span> <em> Definition </em> Not flowing easily </span></a> liquid into a flexible solid. Because the glue was a viscous liquid before setting, it could seep in between the <a class="def">collagen<span> <em> Definition </em> The main structural protein in tissues </span></a> fibers of the target tissue, increasing the adhesion strength.
-          </p>
-          <p> <img src="images/heartglue_2.JPG"/></p>
-          <p class="caption"> Figure 5: Gluing a patch to cardiac tissue </p>
-        </div>
-        </article>
-      </div>
-    </div>
+	          <h2>Engineering Goal and Criteria</h2>
+	          <p>The goal of the project was to engineer an improved bioadhesive that:
+	          </p>
+	          <p>
+	           <ol>
+	           <li> adheres in wet environments in an easily controlled manner</li>
+	           <li> withstands the dynamic movement of muscles and blood</li>
+	           <li> does not damage <a class="def">cardiac tissue<span> <em> Definition </em> The major type of muscle that is found in the heart </span></a> </li>
+	           <li> is non-toxic and biodegradable</li>
+	           <li> provides a strong, watertight seal</li>
+	           </ol>
+	          </p>
+	          <p class="spacing"></p>
+	          <p></p>
+	          <p></p>
+	        </div>
+	        <div id="molecule">
+	          <h2>Molecular Composition and Properties</h2>
+	          <p> First, the researchers looked for <a class="def">hydrophobic<span> <em> Definition </em> not water-attracting </span></a> substances, which can resist interference from the dynamic, wet environment. Enter poly-glycerol sebacate acrylate (PGSA), a hydrophobic polymer which consists of two naturally occuring molecules: glycerol and sebacic acid. Because glycerol and sebacic acid are both produced in our bodies, there was no question about whether PGSA was safe to use. 
+	          </p>
+	          <p><img src="images/3dstructure.jpg"/>
+	          </p>
+		  <p class="caption"> Figure 3: The structure of a molecule of glycerol (left) and sebacic acid (right). The black, white, and red spheres represents carbon, hydrogen, and oxygen atoms repectively. 
+	          </p>
+	          <p> Also, they hypothesized that they glue would be easier to use if it were triggered to harden via ultraviolet (UV) light, which should not be dangerous when used selectively. So, they mixed a light-activation molecule, Irgatcure 2959, with the PGSA. 
+	          </p>
+	        </div>
+	        <div id="lightactivation">
+	          <h2>Light Activation</h2>
+	          <p><img src="images/dualimage2.jpg"/>
+	          </p>
+	          <p class="caption"> Figure 4: The OmniCure S1000 UV Light source machine by Lumen Dynamics Group, Inc used by the researchers (left) and a molecular diagram showing how the glue hardens (right). 
+	<!--          Once the glue was placed on the wound, UV light was applied with an OmniCure S1000 UV light source machine  by Lumen Dynamics Group, Inc, causing the molecules to form a strong bond, while maintaining a flexible shape. -->
+	         </p>
+	         <p> Thus, the researchers simply had to shine a UV light to turn the <a class="def">viscous<span> <em> Definition </em> Not flowing easily </span></a> liquid into a flexible solid. Because the glue was a viscous liquid before setting, it could seep in between the <a class="def">collagen<span> <em> Definition </em> The main structural protein in tissues </span></a> fibers of the target tissue, increasing the adhesion strength.
+	          </p>
+	          <p> <img src="images/heartglue_2.JPG"/></p>
+	          <p class="caption"> Figure 5: Gluing a patch to cardiac tissue </p>
+	        </div>
+	        </article>
+	      </div>
+	    </div>
     <footer>
      <div class="owner">
 
