--- a/index.html
+++ b/index.html
@@ -53,12 +53,7 @@
           </p>
           <p>For example, <a class="def">cryanoacrylate(CA)<span> <em> Definition </em> Cyanoacrylate, a generic name for a family of adhesives </span></a> is difficult to use in wet environments because it can unintentionally harden upon contact with water. Even if placed properly, other <a class="def">hydrophilic<span> <em> Definition </em> water-attracting </span></a> glues can get washed away by the flow of blood, or they can absorb water, swell, and cause irritation or harm. 
           </p>
-          <table>
-          <tr>
-            <td><img src="images/superglue.jpg"/></td>
-            <td><img src="images/sutures.jpg"/></td>
-          </tr>
-          </table>
+          <p><img src="images/superglue.jpg"/></p>
           <p class="caption">Figure 2: To close wounds, doctors often use medical glues that work like Super Glue (left)! Alternatively, doctors can sew the skin together with surgical sutures (right). 
           </p> 
           </div>
